design fix keep property table from spilling out of container on mobile

--- a/src/app/detail/detail.component.css
+++ b/src/app/detail/detail.component.css
@@ -60,3 +60,6 @@ tr {
   border-bottom: 1px solid #bababa;
 }
 
+mat-expansion-panel{
+  overflow-x: auto;
+}
